
	XMPP:
	* Prompt the user before cancelling a presence subscription.
	* Escape status messages that have HTML entities in the Get Info dialog.
	* Fix connecting to XMPP domains with no SRV records from Pidgin on
	  Windows.
	* Fix typing notifications with Pidgin 2.5.9 or earlier.
	* Fix connecting using BOSH and legacy authentication (XEP-0078).

	Finch:
	* Properly detect libpanel on OpenBSD.  (Brad Smith)
	* Remove IO watches in gnt_quit.  (Tomasz Mon)

	Pidgin:
	* Fix the auto-personize functionality in the Buddy List.
	* Set the window icon for the media window to an icon corresponding to
	  the type of call (headphone or webcam).

version 2.6.1 (08/18/2009):
	* Fix a crash when some users send you a link in a Yahoo IM
	* Fix compilation with GTK+ < 2.6.0
	* Fix compilation on Windows

version 2.6.0 (08/18/2009):
	libpurple:
	* Theme support in libpurple thanks to Justin Rodriguez's summer of code
	  project, with some minor additions and cleanups from Paul Aurich.
	* Voice & Video framework in libpurple, thanks to Mike Ruprecht's summer
	  of code project in 2008.
	* It should no longer be possible to end up with duplicates of buddies
	  in a group on the buddy list.
	* Removed the unmaintained and unneeded toc protocol plugin.
	* Fixed NTLM authentication on big-endian systems.
	* Various memory cleanups when unloading libpurple. (Nick Hebner and
	  Stefan Becker)
	* Report idle time 'From last message sent' should work properly.
	* Better handling of corrupt certificates in the TLS Peers cache.
	* More efficient buddy list and conversation search functions.
	  (Jan Kaluza and Aman Gupta)
	* Install scalable versions of the main Pidgin icon, the protocol icons,
	  the dialog icons, and the Buddy List emblems.
	* Build properly on Hurd.  (Marc Dequènes)
	* Various memory leaks fixed as reported by Josh Mueller.
	* Properly handle an IRC buddy appearing in multiple groups.
	* Escape HTML entities in usernames when written with the HTML logger.